--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "node-sass": "^7.0.1",
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^7.1.0",
     "typescript": "~4.1.5",
     "vue-jest": "^5.0.0-0"
   }
